[package]
name = "using-quinn"
version = "0.1.0"
authors = ["ustulation <ustulation@gmail.com>"]
edition = "2018"

[dependencies]
quinn = { path = "../quinn/quinn" }
tokio = "*"
unwrap = "*"
bincode = "1.1.2"
serde = "*"
serde_derive = "1.0.89"
quick-error = "*"
rcgen = "*"
net2 = "0.2.33"
slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.4.0"
slog-async = "2.3.0"

[dev-dependencies]
log = "0.4.6"
env_logger = "0.6.1"
serde_json = "1.0.39"
config_file_handler = "0.11.0"
rustyline = "*"
unwrap = "1.2.1"
clap = "2.32.0"
rand = "0.6.5"
crc = "1.8.1"
